# sjvm

./: Cargo.toml  Readme.md  tracing.toml
docker/: Dockerfile  it-ubuntu-compose.yaml
src/: app_dirs.rs  cli.rs  config.rs  jdk_resolver.rs  list_command.rs  main.rs  memory.rs  setup.rs  setup_command.rs  symlinks.rs  use_command.rs
test-config/: sjvm-conf.json
tests/: e2e.rs
