[package]
name = "sjvm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6"
walkdir = "2.5"
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = [ 
  "max_level_trace", 
  "release_max_level_info"
]}
tracing-config = "0.2"
